[gd_scene load_steps=8 format=3 uid="uid://bw6y0lhuun6d"]

[ext_resource type="Texture2D" uid="uid://idgtmvfimo8g" path="res://Assets/Opdelt porte/pom_port_h.png" id="1_3h24y"]
[ext_resource type="Script" path="res://Assets/Port v2/pom_port.gd" id="1_cd32q"]
[ext_resource type="Texture2D" uid="uid://tm8cbg4ltv8f" path="res://Assets/Opdelt porte/pom_port_v.png" id="2_k8sq6"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ujtcp"]
size = Vector2(68, 20)

[sub_resource type="Animation" id="Animation_bhvcl"]
resource_name = "pom_port_open"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("pom_port_h:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(17, 0), Vector2(33, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("pom_port_v:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-13, 0), Vector2(-33, 0)]
}

[sub_resource type="Animation" id="Animation_xy81r"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("pom_port_v:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-13, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("pom_port_h:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(17, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ewure"]
_data = {
"RESET": SubResource("Animation_xy81r"),
"pom_port_open": SubResource("Animation_bhvcl")
}

[node name="pom_port" type="StaticBody2D"]
script = ExtResource("1_cd32q")

[node name="pom_port_h" type="Sprite2D" parent="."]
position = Vector2(17, 0)
texture = ExtResource("1_3h24y")

[node name="pom_port_v" type="Sprite2D" parent="."]
position = Vector2(-13, 0)
texture = ExtResource("2_k8sq6")

[node name="pom_port_collision" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_ujtcp")

[node name="ap_pom" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ewure")
}

[node name="Timer" type="Timer" parent="."]

[connection signal="timeout" from="Timer" to="." method="close_port"]
